--- a/Frontend/src/app/employees/commissions-index/commissions-index.component.html
+++ b/Frontend/src/app/employees/commissions-index/commissions-index.component.html
@@ -51,7 +51,7 @@
                       ? "Aprobada"
                       : commission.isApprovedByFinances === false ||
                         commission.isApprovedByManager === false
-                      ? "No aprobada"
+                      ? "Rechazada"
                       : "Por aprobar"
                   }}</span
                 >
