--- a/Frontend/src/app/manager/commissions-index/commissions-index.component.html
+++ b/Frontend/src/app/manager/commissions-index/commissions-index.component.html
@@ -31,18 +31,22 @@
               <td>
                 <span
                   [ngClass]="
+                    commission.isApprovedByFinances &&
                     commission.isApprovedByManager
                       ? 'bg-primary'
-                      : commission.isApprovedByManager === false
+                      : commission.isApprovedByFinances === false ||
+                        commission.isApprovedByManager === false
                       ? 'bg-danger'
                       : 'bg-secondary'
                   "
                   class="badge rounded-pill"
                   >{{
+                    commission.isApprovedByFinances &&
                     commission.isApprovedByManager
                       ? "Aprobada"
-                      : commission.isApprovedByManager === false
-                      ? "No aprobada"
+                      : commission.isApprovedByFinances === false ||
+                        commission.isApprovedByManager === false
+                      ? "Rechazada"
                       : "Por aprobar"
                   }}</span
                 >
