Visualización empleados por departamento

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -36,7 +36,7 @@
             <a href="manager/commissions" class="nav-link">Solicitudes</a>
           </li>
           <li class="nav-item">
-            <a href="manager/reports" class="nav-link">Reportes</a>
+            <a href="manager/employees" class="nav-link">Empleados</a>
           </li>
         </ul>
         <ul
@@ -48,9 +48,6 @@
           </li>
           <li class="nav-item">
             <a href="finances/departments" class="nav-link">Departamentos</a>
-          </li>
-          <li class="nav-item">
-            <a href="finances/reports" class="nav-link">Reportes</a>
           </li>
         </ul>
         <span class="btn btn-user btn-sm disabled">
