--- a/Frontend/src/app/finances/department-index/department-index.component.html
+++ b/Frontend/src/app/finances/department-index/department-index.component.html
@@ -30,6 +30,7 @@
         </dd>
       </dl>
       <ul class="list-inline text-center">
+        
         <li class="list-inline-item">
           <a
             href="/finances/{{ department.departmentDescription }}/commissions"
@@ -39,7 +40,14 @@
         </li>
         <li class="list-inline-item">
           <a
-            href="/finances/{{ department.departmentDescription }}/commissions"
+            href="/finances/{{ department.departmentDescription }}/employees"
+            class="btn btn-outline-red"
+            >Empleados</a
+          >
+        </li>
+        <li class="list-inline-item">
+          <a
+            href="/finances/{{ department.departmentDescription }}/reports"
             class="btn btn-outline-red"
             >Reportes</a
           >
