--- a/Frontend/src/app/finances/employee-index/employee-index.component.html
+++ b/Frontend/src/app/finances/employee-index/employee-index.component.html
@@ -29,7 +29,7 @@
               <td>{{ employee.email }}</td>
               <td>{{ employee.phoneNumber }}</td>
               <td class="text-center">
-                <a href="/manager/employees/reports/{{employee.id}}"
+                <a href="/finances/{{ employee.department }}/employees/{{employee.id}}/reports"
                   class="btn btn-sm btn-outline-primary"
                 >
                   <i class="fa fa-file"></i>
