--- a/Frontend/src/app/employees/employees-home/employees-home.component.html
+++ b/Frontend/src/app/employees/employees-home/employees-home.component.html
@@ -1,4 +1,6 @@
-<h1 class="display-5">Empleado</h1>
-<h2 class="h5 mt-4">
-  Bienvenido al sistema de comisiones {{ employee?.name }}
-</h2>
+<div *ngIf="employee">
+  <h1 class="display-5">Empleado</h1>
+  <h2 class="h5 mt-4">
+    Bienvenido al sistema de comisiones {{ employee?.name }}
+  </h2>
+</div>
