--- a/Frontend/src/app/manager/manager-home/manager-home.component.html
+++ b/Frontend/src/app/manager/manager-home/manager-home.component.html
@@ -1,2 +1,6 @@
-<h1 class="display-5">Área de {{manager?.department}}</h1>
-<h2 class="h5 mt-4">Bienvenido al sistema de comisiones {{manager?.name}}</h2>
+<div *ngIf="manager">
+  <h1 class="display-5">Área de {{ manager?.department }}</h1>
+  <h2 class="h5 mt-4">
+    Bienvenido al sistema de comisiones {{ manager?.name }}
+  </h2>
+</div>
