--- a/Frontend/src/app/finances/department-index/department-index.component.html
+++ b/Frontend/src/app/finances/department-index/department-index.component.html
@@ -3,7 +3,7 @@
   <div
     *ngFor="let department of departments"
     class="card me-4 mb-4"
-    style="width: 31rem"
+    style="width: 30rem"
   >
     <div class="card-body">
       <dl class="row">
@@ -30,25 +30,31 @@
         </dd>
       </dl>
       <ul class="list-inline text-center">
-        
         <li class="list-inline-item">
           <a
             href="/finances/{{ department.departmentDescription }}/commissions"
-            class="btn btn-outline-red"
-            >Solicitudes</a
+            class="btn btn-sm btn-outline-red mb-2"
+            >Comisiones</a
           >
         </li>
         <li class="list-inline-item">
           <a
             href="/finances/{{ department.departmentDescription }}/employees"
-            class="btn btn-outline-red"
+            class="btn btn-sm btn-outline-red mb-2"
             >Empleados</a
           >
         </li>
         <li class="list-inline-item">
           <a
             href="/finances/{{ department.departmentDescription }}/reports"
-            class="btn btn-outline-red"
+            class="btn btn-sm btn-outline-red mb-2"
+            >Presupuesto</a
+          >
+        </li>
+        <li class="list-inline-item">
+          <a
+            href="/finances/{{ department.departmentDescription }}/reports"
+            class="btn btn-sm btn-outline-red mb-2"
             >Reportes</a
           >
         </li>
