--- a/Frontend/src/app/employees/factures-index/factures-index.component.html
+++ b/Frontend/src/app/employees/factures-index/factures-index.component.html
@@ -16,7 +16,7 @@
         <table class="table table-hover">
           <thead>
             <tr>
-              <th scope="col">Fecha de las factura</th>
+              <th scope="col">Fecha de la factura</th>
               <th scope="col">Descripción de la factura</th>
               <th scope="col">Monto de la factura</th>
               <th scope="col">Archivo</th>
