--- a/Frontend/src/app/finances/reports-by-employee/reports-by-employee.component.html
+++ b/Frontend/src/app/finances/reports-by-employee/reports-by-employee.component.html
@@ -11,7 +11,14 @@
 >
   Regresar
 </a>
-<div *ngIf="employee && viatics?.length > 0 && transports?.length > 0">
+<div
+  *ngIf="
+    employee &&
+    commissions?.length > 0 &&
+    viatics?.length > 0 &&
+    transports?.length > 0
+  "
+>
   <div class="mt-5">
     <h1 class="display-5">General</h1>
     <div class="mt-4 row mx-auto">
