Funcionalidad reportes por empleados finalizada

--- a/Frontend/src/app/finances/department-index/department-index.component.html
+++ b/Frontend/src/app/finances/department-index/department-index.component.html
@@ -45,13 +45,13 @@
           >
         </li>
       
-        <li class="list-inline-item">
+        <!-- <li class="list-inline-item">
           <a
             href="/finances/{{ department.departmentDescription }}/reports"
             class="btn btn-sm btn-outline-red mb-2"
             >Reportes</a
           >
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
