--- a/Frontend/src/app/finances/reports-by-employee/reports-by-employee.component.html
+++ b/Frontend/src/app/finances/reports-by-employee/reports-by-employee.component.html
@@ -15,10 +15,10 @@
   <div class="mt-5">
     <h1 class="display-5">General</h1>
     <div class="mt-4 row mx-auto">
-      <div class="card me-4 ms-1 mb-4" style="width: 14rem">
+      <div class="card me-4 ms-1 mb-4" style="width: 30rem">
         <div class="card-body">
           <dl class="row">
-            <h5 class="card-title text-center">Comisiones asignadas</h5>
+            <h5 class="card-title text-center">Número de comisiones asignadas</h5>
             <p class="text-muted h2 text-center">
               <strong>
                 {{ viatics.length + transports.length }}
@@ -27,27 +27,19 @@
           </dl>
         </div>
       </div>
-      <div class="card me-4 ms-1 mb-4" style="width: 14rem">
+      <div class="card me-4 ms-1 mb-4" style="width: 30rem">
         <div class="card-body">
           <dl class="row">
-            <h5 class="card-title text-center">Gastos totales</h5>
+            <h5 class="card-title text-center">Gastos totales realizados</h5>
+            <p class="text-muted h2 text-center">
+              <strong>
+                ${{ amount | number: "1.2" }} MXN 
+              </strong>
+            </p>
           </dl>
         </div>
       </div>
-      <div class="card me-4 ms-1 mb-4" style="width: 14rem">
-        <div class="card-body">
-          <dl class="row">
-            <h5 class="card-title text-center">Gastos en viáticos</h5>
-          </dl>
-        </div>
-      </div>
-      <div class="card me-4 ms-1 mb-4" style="width: 14rem">
-        <div class="card-body">
-          <dl class="row">
-            <h5 class="card-title text-center">Gastos en transportes</h5>
-          </dl>
-        </div>
-      </div>
+      
     </div>
   </div>
   <div class="mt-5">
@@ -118,6 +110,24 @@
         <dl class="row">
           <h5 class="card-title text-center">Gastos desglosados</h5>
         </dl>
+        <div class="table-responsive">
+          <table *ngIf="factures.length > 0" class="table table-hover ">
+            <thead>
+              <tr>
+                <th scope="col">Fecha</th>
+                <th scope="col">Concepto del gasto</th>
+                <th scope="col">Monto</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let facture of factures">
+                <td>{{ facture.date }}</td>
+                <td>{{ facture.factureDescription }}</td>
+                <td>${{ (facture.amount | number: "1.2") }} MXN</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
