--- a/Frontend/src/app/manager/commissions-index/commissions-index.component.html
+++ b/Frontend/src/app/manager/commissions-index/commissions-index.component.html
@@ -28,7 +28,7 @@
                 </td>
                 <td>{{ commission.placeCommission }}</td>
                 <td>{{ commission.beginDate | date: "dd-MMM-yyyy":"es" }}</td>
-                <td>{{ commission.endDate | date: "dd-MMM-yyyy" }}</td>
+                <td>{{ commission.endDate | date: "dd-MMM-yyyy":"es" }}</td>
                 <td>
                   <span
                     [ngClass]="
