--- a/Frontend/src/app/employees/commission-form/commission-form.component.html
+++ b/Frontend/src/app/employees/commission-form/commission-form.component.html
@@ -58,6 +58,7 @@
       class="form-control"
       type="text"
       id="placeCommission"
+      maxlength="45"
     />
     <div class="invalid-feedback">
       Por favor ingrese el lugar de la comisión.
