Mensajes de validación agregados

--- a/Frontend/src/app/manager/commissions-index/commissions-index.component.html
+++ b/Frontend/src/app/manager/commissions-index/commissions-index.component.html
@@ -6,7 +6,10 @@
         <h2 class="h5">Solicitudes del Área de {{ manager?.department }}</h2>
       </div>
       <div class="card-body">
-        <div class="table-responsive">
+        <p class="lead mt-3" *ngIf="commissions?.length == 0">
+          No se han realizado solicitudes de comisiones.
+        </p>
+        <div *ngIf="commissions?.length > 0" class="table-responsive">
           <table class="table table-hover">
             <thead>
               <tr>
