--- a/Frontend/src/app/employees/factures-index/factures-index.component.html
+++ b/Frontend/src/app/employees/factures-index/factures-index.component.html
@@ -1,3 +1,4 @@
+<h1 class="display-5 mt-5">Facturas</h1>
 <div class="mt-4">
   <button
     type="button"
@@ -12,7 +13,10 @@
       <h2 class="h5">Facturas de la comisión</h2>
     </div>
     <div class="card-body">
-      <div class="table-responsive">
+      <p class="lead mt-3" *ngIf="factures?.length == 0">
+        No existen facturas registradas para la comisión.
+      </p>
+      <div *ngIf="factures?.length > 0" class="table-responsive">
         <table class="table table-hover">
           <thead>
             <tr>
@@ -28,12 +32,14 @@
               <td>{{ facture.factureDescription }}</td>
               <td>$ {{ facture.amount | number: "1.2" }}</td>
               <td>
-                <a href="{{ facture?.filePath }}" target="_blank"
-                type="button"
+                <a
+                  href="{{ facture?.filePath }}"
+                  target="_blank"
+                  type="button"
                   class="btn btn-sm btn-outline-primary"
                 >
                   <i class="fa fa-file"></i>
-              </a>
+                </a>
               </td>
             </tr>
           </tbody>
