--- a/Frontend/src/app/finances/commission-index/commission-index.component.html
+++ b/Frontend/src/app/finances/commission-index/commission-index.component.html
@@ -8,7 +8,10 @@
       <h2 class="h5">Comisiones solicitadas</h2>
     </div>
     <div class="card-body">
-      <div class="table-responsive">
+      <p class="lead mt-3" *ngIf="commissions?.length == 0">
+        No se han realizado solicitudes de comisiones en el departamento.
+      </p>
+      <div *ngIf="commissions?.length > 0" class="table-responsive">
         <table class="table table-hover">
           <thead>
             <tr>
