--- a/Frontend/src/app/finances/commission-info/commission-info.component.html
+++ b/Frontend/src/app/finances/commission-info/commission-info.component.html
@@ -4,7 +4,7 @@
 <a
   href="/finances/{{ commission?.employee[0].department }}/commissions"
   type="button"
-  class="btn btn-outline-red"
+  class="btn btn-outline-red mt-2"
 >
   Regresar
 </a>
@@ -102,6 +102,32 @@
             }}
           </div>
         </li>
+        <li
+          class="
+            list-group-item
+            d-flex
+            justify-content-between
+            align-items-start
+          "
+        >
+          <div class="ms-2 me-auto">
+            <div class="fw-bold">Monto depositado</div>
+            <p *ngIf="commission?.amountAssigned != null">
+              ${{ commission?.amountAssigned | number: "1.2" }}
+            </p>
+            <button
+              *ngIf="
+                commission?.amountAssigned === null &&
+                commission?.isApprovedByFinances
+              "
+              class="btn btn-sm btn-outline-red mt-2"
+              data-bs-toggle="modal"
+              data-bs-target="#reqDepositModal"
+            >
+              Realizar depósito
+            </button>
+          </div>
+        </li>
       </ol>
       <div
         *ngIf="
@@ -134,3 +160,8 @@
   *ngIf="commission?.isApprovedByFinances && commission.isApprovedByManager"
 >
 </app-facture-index>
+
+<app-modal idModal="reqDepositModal">
+  <h5 modalTitle>Realizar deposito</h5>
+  <app-deposit-form></app-deposit-form>
+</app-modal>
