--- a/Frontend/src/app/modules/employees/factures-index/factures-index.component.html
+++ b/Frontend/src/app/modules/employees/factures-index/factures-index.component.html
@@ -2,7 +2,7 @@
 <div class="mt-4">
   <button
     type="button"
-    class="btn btn-outline-red"
+    class="btn btn-outline-secondary"
     data-bs-toggle="modal"
     data-bs-target="#reqCommissionModal"
   >
