--- a/Frontend/src/app/modules/employees/commission-form/commission-form.component.html
+++ b/Frontend/src/app/modules/employees/commission-form/commission-form.component.html
@@ -65,6 +65,6 @@
     </div>
   </div>
   <div class="col-12 mb-2 mt-4">
-    <button type="submit" class="btn btn-outline-red">Solicitar</button>
+    <button type="submit" class="btn btn-outline-primary">Solicitar</button>
   </div>
 </form>
