--- a/Frontend/src/app/modules/employees/employees-home/employees-home.component.html
+++ b/Frontend/src/app/modules/employees/employees-home/employees-home.component.html
@@ -1,4 +1,6 @@
-<h1 class="display-5">Empleado</h1>
-<h2 class="h5 mt-4">
-  Bienvenido al sistema de comisiones {{employee?.name}}
-</h2>
+<h1 class="h1 ">Empleados</h1>
+<div class="mt-3 content-container">
+  <p class="lead" *ngIf="employee">
+    Bienvenido al sistema de comisiones {{ employee.name }}
+  </p>
+</div>
